exports[`Async Parametric Assertion Error Snapshots > \"{function} 'to fulfill with value satisfying' / 'to resolve with value satisfying' {any}\" > should throw a consistent AssertionError [function-to-fulfill-with-value-satisfying-to-resolve-with-value-satisfying-any-3s3p] <snapshot> 1`] = `
{}
`;

exports[`Async Parametric Assertion Error Snapshots > \"{function} 'to reject with a' / 'to reject with an' {constructible}\" > should throw a consistent AssertionError [function-to-reject-with-a-to-reject-with-an-constructible-3s3p] <snapshot> 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple"
}
`;

exports[`Async Parametric Assertion Error Snapshots > \"{function} 'to reject with error satisfying' {any}\" > should throw a consistent AssertionError [function-to-reject-with-error-satisfying-any-3s3p] <snapshot> 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple"
}
`;

exports[`Async Parametric Assertion Error Snapshots > \"{function} 'to reject'\" > should throw a consistent AssertionError [function-to-reject-2s2p] <snapshot> 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "function fulfilled",
  "expected": "function to reject",
  "diff": "simple"
}
`;

exports[`Async Parametric Assertion Error Snapshots > \"{function} 'to resolve' / 'to fulfill'\" > should throw a consistent AssertionError [function-to-resolve-to-fulfill-2s2p] <snapshot> 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "function rejected",
  "expected": "function to fulfill",
  "diff": "simple"
}
`;

exports[`Async Parametric Assertion Error Snapshots > \"{promiselike} 'to fulfill with value satisfying' / 'to resolve with value satisfying' {any}\" > should throw a consistent AssertionError [promiselike-to-fulfill-with-value-satisfying-to-resolve-with-value-satisfying-any-3s3p] <snapshot> 1`] = `
{}
`;

exports[`Async Parametric Assertion Error Snapshots > \"{promiselike} 'to reject with a' / 'to reject with an' {constructible}\" > should throw a consistent AssertionError [promiselike-to-reject-with-a-to-reject-with-an-constructible-3s3p] <snapshot> 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple"
}
`;

exports[`Async Parametric Assertion Error Snapshots > \"{promiselike} 'to reject with error satisfying' {any}\" > should throw a consistent AssertionError [promiselike-to-reject-with-error-satisfying-any-3s3p] <snapshot> 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple"
}
`;

exports[`Async Parametric Assertion Error Snapshots > \"{promiselike} 'to reject'\" > should throw a consistent AssertionError [promiselike-to-reject-2s2p] <snapshot> 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "function fulfilled",
  "expected": "function to reject",
  "diff": "simple"
}
`;

exports[`Async Parametric Assertion Error Snapshots > \"{promiselike} 'to resolve' / 'to fulfill'\" > should throw a consistent AssertionError [promiselike-to-resolve-to-fulfill-2s2p] <snapshot> 1`] = `
{
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "promise rejected",
  "expected": "promise to not reject",
  "diff": "simple"
}
`;
